STAFF: lec
CHANGES:
1) TR12223/gxd anatomy II
obsoelte:
GXD_Transgenic.rpt
GXD_EMAPS_MappingChecks.sql
GXD_EMAPS_MappingAdUnmappedChecks.py
GXD_EMAPS_MappingNameChecks.py
GXD_Mouse_Developmental_Anatomy.py

change:
GXD_EMAPS_Terms.py
GXD_SpecNoAge.sql
GXD_SpecTheiler.sql
GXD_SpecTheilerAge.py
GXD_SameStructure.py
RECOMB_SameStructure.py
GXD_ExpPresNotPres.py
RECOMB_ExpPresNotPres.py

TAG: qcreports_db-tr12223-BP
DATE: 01/08/2016
STAFF: lec
CHANGES:
1) branch point tag for TR12223/gxd anatomy II

TAG: qcreports_db-6-0-2-2
DATE: 01/04/2016
STAFF: lec
CHANGES:
TR12216/Improve Duplicate MP annotation QC report
1) weekly/VOC_MPDups.sql

TAG: qcreports_db-6-0-2-1
DATE: 12/24/2015
STAFF: lec
CHANGES:
TR12207 : move from weekly to daily
1) GXD_EMAPA_Terms.py 
2) GXD_EMAPS_Terms.py

TAG: qcreports_db-6-0-1-3
DATE: 11/20/2015
STAFF: lnh
CHANGES:tr12134
1) mgd/GXD_EMAPS_MappingAdUnmappedChecks.py: Added sort by Theiler stage 
2) mgd/GXD_ExpPresNotPres.py: Added sort by structure 
3) mgd/GXD_SpecTheiler.sql: Added sort by specimenLabel 

TAG: qcreports_db-6-0-1-2
DATE: 11/20/2015
STAFF: dbm
CHANGES: 
1) mgd/GO_EvidenceProperty.py: Replace $GEN_WEBSHARE_EMAIL with $USER for email

TAG: qcreports_db-6-0-1-1
DATE: 10/13/2015
STAFF: lec
CHANGES: 
1) TR12153/mgd/RECOMB_SpecNoAge.sql

TAG: qcreports_db-6-0-0-24
DATE: 09/28/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-23
DATE: 09/24/2015
STAFF: lec
CHANGES: TR12146
1) mgd/GXD_EMAPS_MappingChecks.sql

TAG: qcreports_db-6-0-0-22
TAG: qcreports_db-6-0-0-21
DATE: 09/22/2015, 09/23/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-20
DATE: 09/21/2015
STAFF: lnh 
CHANGES: TR12143
1) mgd/GO_EvidenceProperty.py

TAG: qcreports_db-6-0-0-19
DATE: 09/21/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-18
TAG: qcreports_db-6-0-0-17
DATE: 09/09/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py
