@@ -1,7 +1,7 @@
 
 /* TR 9938: mismatch of marker type for an alleleand for allele pair */
 /* all allele pairs that are attached to different markers */
-
+/* TR12057 include only MGI IDs */
 
 \echo ''
 \echo 'Genotypes where Allele Pairs are associated with different Markers'
@@ -19,5 +19,6 @@ and a2._Marker_key = m2._Marker_key
 and m1.symbol != m2.symbol
 and g._Genotype_key = a._Object_key
 and a._MGIType_key = 12
+and a._LogicalDB_key = 1
 ;
 
