@@ -1,3 +1,4 @@
+/* TR12057 include only MGI IDs */
 
 \echo ''
 \echo 'Genotypes where Allele 1 is ''wild type'''
@@ -10,4 +11,5 @@ and ap._Allele_key_1 = a._Allele_key
 and a.isWildType = 1
 and g._Genotype_key = ga._Object_key
 and ga._MGIType_key = 12
+and ga._LogicalDB_key = 1
 ;
