@@ -20,6 +20,15 @@ RECOMB_SameStructure.py
 GXD_ExpPresNotPres.py
 RECOMB_ExpPresNotPres.py
 
+TAG: qcreports_db-6-0-2-6
+TAG: qcreports_db-6-0-2-5
+DATE: 01/26/2015
+STAFF: sc
+CHANGES: TR12057
+1) GXD_AllelePairCheck.sql.rpt
+2) GXD_OrphanGenotype.sql.rpt
+3) GXD_WildType.sql.rpt
+
 TAG: qcreports_db-tr12223-BP
 DATE: 01/08/2016
 STAFF: lec
